# met-fetch

./: .gitignore  Makefile  README.md  TESTING.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py
.github/workflows/: pylint.yml
src/: cli.py  constants.py  fetch.py  format.py  main.py  met.py  report.py  writer.py
src/api/: met.py
src/decorators/: ignore_unknown_properties.py
src/models/: args.py  artwork.py  constituent.py  measurements.py  tag.py
src/services/: artwork.py  met.py  met_service.py  wallpaper.py
src/utils/: list.py  print.py  report.py
tests/: conftest.py  test_report.py
